--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,13 +10,13 @@
 
 
 <body>
-    <nav>
-    <div class="logout-button">
-        <a href="/logout">
-            Logout
-        </a>
-    </div>
-    </nav>
+    {{!-- <nav>
+        <div class="logout-button">
+            <a href="/logout">
+                Logout
+            </a>
+        </div>
+    </nav> --}}
     {{{body}}}
 
 </body>
