--- a/views/result.handlebars
+++ b/views/result.handlebars
@@ -4,5 +4,125 @@
 
 {{/each}} --}}
 
+<div class="Results-container">
+    <a href="/logout" class="whiteButton">Logout</a>
+    {{!-- <button class="whiteButton">
+        Logout
+    </button> --}}
+    <h1>Search it, Buy it!</h1>
 
-<h1>result page</h1>
+    <main class="results">
+        <button class="whiteButton">
+            Search another image
+        </button>
+        <div>
+            <div class="item">
+                <div>
+                    <span>
+                        <strong>Website</strong>
+                    </span>
+                    <span>Location</span>
+                </div>
+                <button class="blueButton">
+                    Go to Website
+                </button>
+            </div>
+
+            <div class="item">
+                <div>
+                    <span>
+                        <strong>Website</strong>
+                    </span>
+                    <span>Location</span>
+                </div>
+                <button class="blueButton">
+                    Go to Website
+                </button>
+            </div>
+
+            <div class="item">
+                <div>
+                    <span>
+                        <strong>Website</strong>
+                    </span>
+                    <span>Location</span>
+                </div>
+                <button class="blueButton">
+                    Go to Website
+                </button>
+            </div>
+
+            <div class="item">
+                <div>
+                    <span>
+                        <strong>Website</strong>
+                    </span>
+                    <span>Location</span>
+                </div>
+                <button class="blueButton">
+                    Go to Website
+                </button>
+            </div>
+
+            <div class="item">
+                <div>
+                    <span>
+                        <strong>Website</strong>
+                    </span>
+                    <span>Location</span>
+                </div>
+                <button class="blueButton">
+                    Go to Website
+                </button>
+            </div>
+
+            <div class="item">
+                <div>
+                    <span>
+                        <strong>Website</strong>
+                    </span>
+                    <span>Location</span>
+                </div>
+                <button class="blueButton">
+                    Go to Website
+                </button>
+            </div>
+
+            <div class="item">
+                <div>
+                    <span>
+                        <strong>Website</strong>
+                    </span>
+                    <span>Location</span>
+                </div>
+                <button class="blueButton">
+                    Go to Website
+                </button>
+            </div>
+
+            <div class="item">
+                <div>
+                    <span>
+                        <strong>Website</strong>
+                    </span>
+                    <span>Location</span>
+                </div>
+                <button class="blueButton">
+                    Go to Website
+                </button>
+            </div>
+
+            <div class="item">
+                <div>
+                    <span>
+                        <strong>Website</strong>
+                    </span>
+                    <span>Location</span>
+                </div>
+                <button class="blueButton">
+                    Go to Website
+                </button>
+            </div>
+        </div>
+    </main>
+</div>
