--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<div id="drop-area">
+{{!-- <div id="drop-area">
 
     <form id="uploadForm" method="post" enctype="multipart/form-data" class="my-form" action="/search" ref="uploadForm">
         <label for="form-input">
@@ -11,7 +11,23 @@
         <input class="form-button" type="submit" value="Upload">
 
     </form>
-        
+
+</div> --}}
+
+<div class="Search-container">
+    <a href="/logout" class="whiteButton">Logout</a>
+    {{!-- <button class="whiteButton">
+        Logout
+    </button> --}}
+
+    <form id="uploadForm" method="post" enctype="multipart/form-data" class="my-form" action="/search" ref="uploadForm">
+        <h1>Search it, Buy it!</h1>
+
+        <input type="file" name="file" onchange="handleFiles(files)"></input>
+        <button class="whiteButton">
+            Search!
+        </button>
+    </form>
 </div>
 
 <script src="js/dragndrop.js" type="text/javascript"></script>
