--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -77,3 +77,4 @@
 </div> --}}
 
 <script src="js/cookie.js" type="text/javascript"></script>
+<script src="js/loc.js" type="text/javascript"></script>
