--- a/views/resultsPage.handlebars
+++ b/views/resultsPage.handlebars
@@ -8,6 +8,10 @@
 
 <h1>Search it, Buy it!</h1>
 
+<a class="search-other-image" href="/searchOther">
+    Search Other Image
+</a>
+
 <div class="result-container">
 
     {{#each apiData}}
