--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,7 @@ h1 {
 }
 
 .forms {
+    margin-top: -75px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -51,6 +52,24 @@ label {
     height: 40px;
 }
 
+.search-other-image {
+    margin-top: 30px;
+    background-color: white;
+    color: rgb(49, 138, 226);
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    width: 200px;
+    height: 40px;
+    text-decoration: none;
+    margin: auto;
+    margin-bottom: 45px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .form-button:hover {
     background-color: lightgray;
     cursor: pointer;
@@ -75,6 +94,7 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: -60px;
     
 }
 .logout-button a{
@@ -82,6 +102,7 @@ nav{
     color:white;
     font-size: 1.2em;
     text-decoration: none;
+
 }
 
 .logout-button:hover a{
@@ -132,6 +153,7 @@ nav{
     font-family: sans-serif;
     min-height: 300px;
     border-radius: 25px;
+    margin-top: 30px;
 }
 
 #drop-area.highlight {
